---------------------------------------------------------------------------------------------------
Version: 2.3.1
Date: 30-3-2025
  Compatibility:
    - Updated Bob's mod compatibility.
---------------------------------------------------------------------------------------------------
Version: 2.3.0
Date: 3-1-2025
  Graphics:
    - Updated graphics for all aircraft entities. 
    - Aircraft and carbon fiber aircraft now have updated and distinct icons.
---------------------------------------------------------------------------------------------------
Version: 2.2.2
Date: 2-1-2025
  Compatibility:
    - Removed incompatibility flag for Aircraft in preparation for an update to the original Aircraft that points to this mod as a hard dependency.
  Other:
    - Removed all indications that this mod is an unofficial fork from the mod's header.
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 1-1-2025
  Compatibility:
    - Fixed impossible tech tree requirement when planet-muluna is installed.
    - Removed compatibility flags for Bob's mods.
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 18-12-2024
  Changes:
    - Added inventory sounds pulled from base game(https://github.com/nicholasgower/Aircraft-Space-Age/pull/3).
    - Added "Disable tank controls" option
    - Added "Fuel consumption multiplier" option
  Compatibility:
    - Added support for AircraftRealism
  Locale:
    - Partially updated Chinese(Houraiji_Kyuusyou) and German(MeteorSwarm) localizations
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 15-11-2024
  Changes:
    - Locked aircraft stat rebalance behind disabling "Use Old 2.0.2 aircraft stats" startup setting, which is enabled by default.