@@ -1,6 +1,6 @@
 {
   "name": "Aircraft-space-age",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "factorio_version": "2.0",
   "title": "Aircraft",
   "author": "MeteorSwarm, Thomasnotused", 
