@@ -81,10 +81,10 @@ high-explosive-cannon-shells=10x (theoretically) stronger explosive shells, for 
 afterburner=Push your aircraft to the speed limit with an afterburner!
 aircraft-energy-shield=Lightweight, high-capacity shield modules designed for heavy fire.
 napalm=A longer-burning alternative to flamethrower fuel, works especially well when fired from vehicle-mounted launchers!
-gunships-carbon-fiber=Lightweight alternative to conventional gunships.
-jets-carbon-fiber=Lightweight alternative to conventional jets.
-cargo-planes-carbon-fiber=Lightweight alternative to conventional cargo planes.
-flying-fortress-carbon-fiber=Lightweight alternative to the conventional flying fortress.
+gunships-carbon-fiber=Lightweight alternative to conventional gunships. Weighs half as much and consumes half as much fuel.
+jets-carbon-fiber=Lightweight alternative to conventional jets. Weighs half as much and consumes half as much fuel.
+cargo-planes-carbon-fiber=Lightweight alternative to conventional cargo planes. Weighs half as much and consumes half as much fuel.
+flying-fortress-carbon-fiber=Lightweight alternative to the conventional flying fortress. Weighs half as much and consumes half as much fuel.
 
 [equipment-name]
 aircraft-energy-shield=Aircraft Energy Shield
