@@ -1,6 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.3.1
 Date: 30-3-2025
+  Balancing: 
+    - Changed default fuel consumption multiplier on aircraft to 10.
+    - Carbon fiber aircraft now consume half as much fuel as standard aircraft.
   Compatibility:
     - Updated Bob's mod compatibility.
 ---------------------------------------------------------------------------------------------------
